Updated properties file to reflect rule parameters

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,14 +14,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8080
 
 # Parcel configurations
-parcel.weight.max.limit=50
-parcel.weight.heavy=10
-parcel.price.php.heavy=20
-
-
-#parcel.volume.small=1500
-#parcel.volume.medium=2500
-#
-#parcel.price.php.small=0.03
-#parcel.price.php.medium=0.04
-#parcel.price.php.large=0.05
+parcel.max.weight.limit=50
+parcel.weight.heavy.limit=10
+parcel.volume.small.limit=1500
+parcel.volume.medium.limit=2500
+parcel.rate.heavy=20
+parcel.rate.small=0.03
+parcel.rate.medium=0.04
+parcel.rate.large=0.05
