--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=parcel
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=
-
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.dll-auto=create
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=
+#
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.dll-auto=create
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=8080
 
@@ -22,3 +22,9 @@ parcel.rate.heavy=20
 parcel.rate.small=0.03
 parcel.rate.medium=0.04
 parcel.rate.large=0.05
+
+# Voucher configurations
+
+voucher.host.uri=https://mynt-exam.mocklab.io
+voucher.endpoint=/voucher
+voucher.api.key=apikey
