Temporarily use the mock voucher endpoint point to local endpoint since provided test endpoint is not working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,10 @@ parcel.rate.medium=0.04
 parcel.rate.large=0.05
 
 # Voucher configurations
+#voucher.host.uri=https://mynt-exam.mocklab.io
+#voucher.endpoint=/voucher
+#voucher.api.key=apikey
 
-voucher.host.uri=https://mynt-exam.mocklab.io
+voucher.host.uri=http://localhost:8080
 voucher.endpoint=/voucher
 voucher.api.key=apikey
