Removed unused .properties configuration for postgresql since a db is no longer needed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,8 @@
 spring.application.name=parcel
 
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=
-#
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.dll-auto=create
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
 server.port=8080
 
-# Parcel configurations
+#Parcel configurations
 parcel.max.weight.limit=50
 parcel.weight.heavy.limit=10
 parcel.volume.small.limit=1500
@@ -23,10 +12,10 @@ parcel.rate.small=0.03
 parcel.rate.medium=0.04
 parcel.rate.large=0.05
 
-# Voucher configurations
+#Voucher configurations
 #voucher.host.uri=https://mynt-exam.mocklab.io
 #voucher.endpoint=/voucher
-#voucher.api.key=apikey
+#voucher.api.key=****
 
 voucher.host.uri=http://localhost:8080
 voucher.endpoint=/voucher
